# weekly-sticky-moderator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py
infrastructure/: cloudwatch.tf  iam.tf  lambda.tf  main.tf  outputs.tf  ssm.tf  variables.tf
infrastructure/remote-state/prod/: main.tf  variables.tf
tests/: conftest.py  test_it.py
