[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "datascience-bot-weekly-sticky-moderator"
authors = ["Nick Vogt <vogt4nick@gmail.com>"]
description = "Weekly sticky moderator for r/datascience."
include = [
    'main.py',
    "poetry.lock",
    "pyproject.toml",
]
packages = [{include = "app"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.19.6"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9"
pre-commit = "^2.15"
pytest = "^6.2"
